[package]
name = "ic-spl"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = "0.10"
# ic-cdk = "0.17"
# ic-canister-log = "0.2"
# ic-canisters-http-types = { git = "https://github.com/dfinity/ic", package = "ic-canisters-http-types" }
# ic-crypto-ed25519 = { package = "ic-ed25519", version = "0.2.0" }
# ic-management-canister-types = "0.1.0"
# ic-metrics-encoder = "1"
# ic-stable-structures = "0.6"
# ic-types = "0.7"
# ic-utils = "0.39"
# base64 = "0.22"
# futures = "0.3"
thiserror = "2"
serde = "1"
serde_json = "1.0"
serde_bytes = "0.11"
serde_derive = "1.0.208"
borsh = "1.5.1"
borsh-derive = "1.5.1"
# url = "2.5"
anyhow = "1.0.86"
num-traits = "0.2.19"
num-derive = "0.4"
num_enum = "0.7.2"
# getrandom = { version = "0.2", features = ["custom"] }
# bip32 = { version = "0.5.1", features = ["k256"] }
ic-solana = { path = "../ic-solana/src/ic-solana" }

[patch.crates-io]
# Required by `solana-client` v2.0
curve25519-dalek = { git = "https://github.com/solana-labs/curve25519-dalek.git", rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464" }
